# Virtual-VR-Emulator

./: .gitignore  LICENSE  README.en.md  README.ko.md  README.md  README.zh.md  THIRD_PARTY_NOTICES.md
app/: package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: hub.rs  installer.rs  lib.rs  presets.rs  settings.rs  steamvr.rs
app/src/i18n/: index.ts
app/src/i18n/locales/: en.json  ja.json  ko.json  zh.json
app/src/ipc/: protocol.ts  wsClient.ts
app/src/lib/: math.ts  tauri.ts
app/src/panels/: DevicePanel.tsx  InputPanel.tsx  PresetPanel.tsx  SettingsView.tsx  SetupPanel.tsx  inputPanel.css  settingsView.css
app/src/scene/: DeviceGizmo.tsx  Viewport.tsx  fpsMode.ts
app/src/settings/: keybindDefs.ts
app/src/state/: settings.ts  store.ts
docs/: PROTOCOL.md
docs/tools/: demo_motion.mjs  make_gifs.ps1  record_app.mjs  shoot_screens.mjs
driver/: CMakeLists.txt
driver/src/: device_provider.cpp  device_provider.h  display_component.cpp  display_component.h  driver_factory.cpp  shared_state.h  vvre_device.cpp  vvre_device.h  ws_client.cpp  ws_client.h
driver/vvre/: driver.vrdrivermanifest
driver/vvre/resources/: driver.vrresources
driver/vvre/resources/input/: legacy_bindings_pico4_controller.json  pico4_controller_profile.json  vvre_hmd_profile.json
driver/vvre/resources/localization/: localization.json
driver/vvre/resources/settings/: default.vrsettings
